--- a/src/components/token-page/Exchanges/style.scss
+++ b/src/components/token-page/Exchanges/style.scss
@@ -20,7 +20,7 @@
 
 .TokenPage {
   &__exchanges-wrapper {
-    padding: 96px 0;
+    padding: 0 0 96px 0;
     background-color: #f2f5f9;
   }
 
@@ -121,7 +121,7 @@
 
   @media #{$screen-max-sm} {
     &__exchanges-wrapper {
-      padding: 80px 0;
+      padding: 0 0 80px 0;
     }
 
     &__exchanges {
