--- a/src/components/index-page/Traction/style.scss
+++ b/src/components/index-page/Traction/style.scss
@@ -119,7 +119,7 @@
             margin: auto;
             padding: 8px;
             color: $c_white;
-            background-color: #343d44;
+            background-color: $dashboard-widget-info-modal-background-color;
             border-radius: 2px;
             opacity: 0;
             visibility: hidden;
