--- a/src/components/DashboardToken/style.scss
+++ b/src/components/DashboardToken/style.scss
@@ -6,4 +6,31 @@
   &__container {
     @include dashboard-container;
   }
+
+  &__price-metrics-grid {
+    display: grid;
+    gap: 16px;
+  }
+
+  @media #{$screen-min-dashboard-sm} {
+    &__price-metrics-grid {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    &__price-chart-widget {
+      grid-column: 1 / span 3;
+    }
+  }
+
+  @media #{$screen-min-dashboard-md} {
+    &__price-metrics-grid {
+      gap: 24px;
+      grid-template-rows: repeat(2, 192px) 160px;
+    }
+
+    &__price-chart-widget {
+      grid-row: 1 / span 3;
+      grid-column: 1 / span 2;
+    }
+  }
 }
