--- a/src/styles/layout/_dashboard.scss
+++ b/src/styles/layout/_dashboard.scss
@@ -74,6 +74,7 @@ $dashboard-base-white-text-color: #ffffff;
 $dashboard-base-gray-text-color: #b5c1c9;
 $dashboard-content-base-text-color: #f4f6f8;
 $dashboard-charts-base-tick-color: #7b8a95;
+$dashboard-charts-tooltip-gray-color: #7b8a95;
 
 // transition func and duration
 
