--- a/src/components/DashboardTable/style.scss
+++ b/src/components/DashboardTable/style.scss
@@ -11,6 +11,10 @@
     box-shadow: 0px -1px 0px 0px rgba(187, 217, 246, 0.13) inset;
   }
 
+  & th {
+    vertical-align: middle;
+  }
+
   &__cell {
     padding: 16px 8px;
 
@@ -20,6 +24,11 @@
 
     &:last-of-type {
       padding-right: 24px;
+    }
+
+    &:nth-of-type(2n),
+    &:nth-of-type(3n) {
+      padding-left: 0;
     }
 
     &.end-align {
