dashboard backers initial implementation

--- a/src/components/DashboardTokenMintingChartWidget/style.scss
+++ b/src/components/DashboardTokenMintingChartWidget/style.scss
@@ -2,6 +2,7 @@
 
 .dashboard-token-minting-chart-widget {
   @include dashboard-widget;
+  overflow-x: hidden;
 
   &__heading {
     display: flex;
