--- a/src/styles/layout/_dashboard.scss
+++ b/src/styles/layout/_dashboard.scss
@@ -33,6 +33,7 @@ $dashboard-hero-video-player-modal-overlay-color: #101214bf;
 $dashboard-section-header-tooltip-background-color: #343d44;
 $dashboard-charts-custom-tooltip-background-color: #272d33;
 $dashboard-widget-tags-background-color: #272d33;
+$dashboard-backer-widget-background-color: #0f1114;
 
 // buttons background colors (with borders)
 
@@ -57,6 +58,7 @@ $dashboard-widget-accent-active-background-color: #342ecf;
 $dashboard-carousel-buttons-background-color: #c2e0ff33;
 $dashboard-carousel-buttons-hover-background-color: #bbd9f621;
 $dashboard-carousel-buttons-pressed-background-color: #c2e0ff33;
+$dashboard-press-story-hover-border-color: #dce1e56b;
 
 // buttons colors
 
