--- a/src/components/DashboardBackers/style.scss
+++ b/src/components/DashboardBackers/style.scss
@@ -54,6 +54,7 @@
 
     & .AboutPage__press__story {
       width: 100%;
+      height: unset;
       max-width: none;
       padding: 16px 0 0 16px;
       gap: 16px;
