history stage card initial implementation

--- a/src/styles/layout/_dashboard.scss
+++ b/src/styles/layout/_dashboard.scss
@@ -65,6 +65,7 @@ $dashboard-press-story-hover-border-color: #dce1e56b;
 $dashboard-header-buttons-color: #f4f6f8;
 $dashboard-header-navbar-buttons-color: #b5c1c9;
 $dashboard-header-navbar-buttons-states-color: #f4f6f8;
+$dashboard-history-stages-buttons-color: #6c6cff;
 
 // text
 
