--- a/src/components/DashboardSectionHeader/style.scss
+++ b/src/components/DashboardSectionHeader/style.scss
@@ -1,6 +1,9 @@
 @import '../../styles/main';
 
 .dashboard-section-header {
+  // padding-top: calc(32px + $dashboard-header-sum-of-heights);
+  padding-top: calc(32px + $dashboard-header-height);
+
   margin-bottom: 16px;
   padding-bottom: 16px;
   position: relative;
@@ -8,6 +11,10 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid $dashboard-base-border-color;
+
+  &.scroll-offset {
+    padding-top: calc(32px + $dashboard-header-sum-of-heights);
+  }
 
   &__heading {
     @include h500;
@@ -38,7 +45,7 @@
   &__tooltip {
     padding: 8px;
     position: absolute;
-    bottom: calc(100% + 8px);
+    bottom: calc(100% - 24px - $dashboard-header-height);
     right: 0;
     background-color: $dashboard-section-header-tooltip-background-color;
     border-radius: 2px;
