--- a/src/styles/layout/_dashboard.scss
+++ b/src/styles/layout/_dashboard.scss
@@ -84,21 +84,33 @@ $dashboard-charts-tooltip-gray-color: #7b8a95;
 $dashboard-transition-timing: cubic-bezier(0, 0, 0.3, 1);
 $dashboard-transition-duration: 150ms;
 
+// sizes
+
+$dashboard-header-height: 65px;
+$dashboard-header-nav-height: 50px;
+$dashboard-header-sum-of-heights: calc($dashboard-header-height + $dashboard-header-nav-height);
+
 // mixins
 
 @mixin dashboard-section {
   padding-block: 40px;
+  padding-top: 8px;
+
+  margin-top: -($dashboard-header-sum-of-heights);
 
   @media #{$screen-min-dashboard-xs} {
     padding-block: 48px;
+    padding-top: 16px;
   }
 
   @media #{$screen-min-dashboard-sm} {
     padding-block: 64px;
+    padding-top: 32px;
   }
 
   @media #{$screen-min-dashboard-md} {
     padding-block: 80px;
+    padding-top: 48px;
   }
 }
 
