--- a/src/components/DashboardTokenPriceChartWidget/style.scss
+++ b/src/components/DashboardTokenPriceChartWidget/style.scss
@@ -5,7 +5,9 @@
   padding-right: 0;
 
   &__current-price {
-    @include dashboard-widget-text;
+    @include h600;
+    color: $dashboard-base-white-text-color;
+    font-feature-settings: $dashboard-font-feature-settings;
   }
 
   &__growth-rate {
@@ -16,6 +18,16 @@
   @media #{$screen-min-dashboard-sm} {
     & {
       padding-right: 0px;
+    }
+
+    &__current-price {
+      @include h700;
+    }
+  }
+
+  @media #{$screen-min-dashboard-md} {
+    &__current-price {
+      @include h800;
     }
   }
 }
