--- a/src/components/DashboardStatsWidget/style.scss
+++ b/src/components/DashboardStatsWidget/style.scss
@@ -14,4 +14,10 @@
   &__helper-text {
     @include dashboard-widget-helper-text;
   }
+
+  @media #{$screen-min-dashboard-md} {
+    &__text.with-text-size-increased-from-md {
+      @include h800;
+    }
+  }
 }
