--- a/src/components/DashboardTokenSupplyWidget/style.scss
+++ b/src/components/DashboardTokenSupplyWidget/style.scss
@@ -79,7 +79,7 @@
 
   @media #{$screen-min-dashboard-lg} {
     &__content {
-      grid-template-rows: 1;
+      grid-template-rows: 1fr;
       grid-template-columns: repeat(3, 1fr);
     }
 
