--- a/src/components/DashboardHero/style.scss
+++ b/src/components/DashboardHero/style.scss
@@ -83,7 +83,8 @@
   &__video-player-modal-overlay {
     position: fixed;
     inset: 0;
-    background-color: $dashboard-hero-video-player-modal-overlay-color;
+    background-color: $dashboard-modals-overlay-color;
+    z-index: calc($dashboard-header-z-index + 1);
   }
 
   @media #{$screen-min-dashboard-xs} {
