--- a/src/components/DashboardHistory/style.scss
+++ b/src/components/DashboardHistory/style.scss
@@ -87,6 +87,138 @@
     cursor: pointer;
   }
 
+  &__modal {
+    position: absolute;
+    inset: 80px 16px;
+    max-width: 800px;
+    margin-inline: auto;
+    background-color: $dashboard-history-modal-background-color;
+    outline: none;
+    border-radius: 8px;
+  }
+
+  &__modal-overlay {
+    position: fixed;
+    inset: 0;
+    background-color: $dashboard-modals-overlay-color;
+    z-index: calc($dashboard-header-z-index + 1);
+  }
+
+  &__modal-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__modal-img-wrapper {
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  &__modal-long-descr-wrapper {
+    padding: 24px;
+    flex: 1 1 auto;
+    overflow-y: auto;
+    scrollbar-color: $dashboard-custom-scrollbar-track-background $dashboard-custom-scrollbar-thumb-background;
+
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: $dashboard-custom-scrollbar-track-background;
+      border-radius: 20px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: $dashboard-custom-scrollbar-thumb-background;
+      border-radius: 20px;
+    }
+
+    &::-moz-scrollbar {
+      width: 8px;
+      border-radius: 20px;
+    }
+  }
+
+  &__modal-long-descr-title {
+    margin-bottom: 16px;
+    @include h400;
+    font-weight: 600;
+    color: $dashboard-content-base-text-color;
+    font-feature-settings: $dashboard-font-feature-settings;
+
+    &_regular {
+      font-weight: 400;
+    }
+  }
+
+  &__button {
+    background-color: $dashboard-history-modal-buttons-background-color;
+    border: 1px solid $dashboard-base-borders-color;
+    border-radius: 2px;
+    cursor: pointer;
+    transition: all $dashboard-transition-timing $dashboard-transition-duration;
+    &:hover:enabled,
+    &:focus:enabled {
+      background-color: $dashboard-buttons-base-hover-background-color;
+    }
+
+    &:active:enabled {
+      background-color: $dashboard-buttons-base-pressed-background-color;
+      transition-duration: 0ms;
+    }
+  }
+
+  &__button-close-modal {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 48px;
+    height: 48px;
+    backdrop-filter: blur(8px);
+  }
+
+  &__modal-actions {
+    padding: 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0px 1px 0px 0px rgba(187, 217, 246, 0.13) inset;
+  }
+
+  &__button-modal-action {
+    width: 157px;
+    height: 40px;
+    padding: 10px 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    @include t200;
+    font-weight: 600;
+    color: $dashboard-content-base-text-color;
+    font-feature-settings: $dashboard-font-feature-settings;
+
+    &:disabled {
+      border-color: $dashboard-history-modal-buttons-background-color;
+      opacity: 0.5;
+      cursor: auto;
+    }
+  }
+
+  &__stages-count {
+    @include t300;
+    color: $dashboard-base-gray-text-color;
+    font-feature-settings: $dashboard-font-feature-settings;
+    &_current {
+      font-weight: 600;
+      color: $dashboard-content-base-text-color;
+    }
+  }
+
   @media #{$screen-min-dashboard-sm} {
     &__stage {
       width: 304px;
