dashboard contributions chart initial implementation

--- a/src/components/DashboardBackers/style.scss
+++ b/src/components/DashboardBackers/style.scss
@@ -161,6 +161,11 @@
   }
 
   @media #{$screen-min-dashboard-md} {
+    & .dashboard-stats-widget {
+      display: flex;
+      flex-direction: column;
+    }
+
     & .dashboard-stats-widget__text-wrapper {
       height: 100%;
       justify-content: center;
