--- a/src/styles/layout/_dashboard.scss
+++ b/src/styles/layout/_dashboard.scss
@@ -37,6 +37,8 @@ $dashboard-backer-widget-background-color: #0f1114;
 $dashboard-history-modal-background-color: #272d33;
 $dashboard-custom-scrollbar-track-background: #bbd9f621;
 $dashboard-custom-scrollbar-thumb-background: #c2e0ff33;
+$dashboard-contibutor-widget-background-color: #0f1114;
+$dashboard-contibutor-widget-border-color: #dce1e56b;
 
 // buttons background colors (with borders)
 
