dashboard community followers initial implementation

--- a/src/styles/layout/_dashboard.scss
+++ b/src/styles/layout/_dashboard.scss
@@ -39,6 +39,8 @@ $dashboard-custom-scrollbar-track-background: #bbd9f621;
 $dashboard-custom-scrollbar-thumb-background: #c2e0ff33;
 $dashboard-contibutor-widget-background-color: #0f1114;
 $dashboard-contibutor-widget-border-color: #dce1e56b;
+$dashboard-follower-widget-background-color: #0f1114;
+$dashboard-follower-widget-hover-border-color: #dce1e56b;
 
 // buttons background colors (with borders)
 
@@ -85,6 +87,7 @@ $dashboard-content-base-text-color: #f4f6f8;
 $dashboard-charts-base-tick-color: #7b8a95;
 $dashboard-charts-tooltip-gray-color: #7b8a95;
 $dashboard-markdown-anchor-color: #7174ff;
+$dashboard-followers-gray-text-color: #7b8a95;
 
 // transition func and duration
 
