--- a/src/styles/layout/_dashboard.scss
+++ b/src/styles/layout/_dashboard.scss
@@ -41,6 +41,7 @@ $dashboard-contibutor-widget-background-color: #0f1114;
 $dashboard-contibutor-widget-border-color: #dce1e56b;
 $dashboard-follower-widget-background-color: #0f1114;
 $dashboard-follower-widget-hover-border-color: #dce1e56b;
+$dashboard-open-event-widget-label-background-color: #0f1114;
 
 // buttons background colors (with borders)
 
@@ -88,6 +89,7 @@ $dashboard-charts-base-tick-color: #7b8a95;
 $dashboard-charts-tooltip-gray-color: #7b8a95;
 $dashboard-markdown-anchor-color: #7174ff;
 $dashboard-followers-gray-text-color: #7b8a95;
+$dashboard-open-events-gray-text-color: #7b8a95;
 
 // transition func and duration
 
