--- a/src/styles/layout/_dashboard.scss
+++ b/src/styles/layout/_dashboard.scss
@@ -68,6 +68,7 @@ $dashboard-carousel-buttons-hover-background-color: #bbd9f621;
 $dashboard-carousel-buttons-pressed-background-color: #c2e0ff33;
 $dashboard-press-story-hover-border-color: #dce1e56b;
 $dashboard-history-modal-buttons-background-color: #c2e0ff33;
+$dashboard-exchange-button-background-color: #c2e0ff33;
 
 // buttons colors
 
