--- a/src/components/dashboard-page/Community/OpenEvents/style.scss
+++ b/src/components/dashboard-page/Community/OpenEvents/style.scss
@@ -58,7 +58,7 @@
 
   &__event-picture {
     height: 177px;
-    background-position: center;
+    background-position: left;
     background-size: cover;
     background-repeat: no-repeat;
     border-top-left-radius: 8px;
