team section initial implementation

--- a/src/styles/layout/_dashboard.scss
+++ b/src/styles/layout/_dashboard.scss
@@ -43,6 +43,8 @@ $dashboard-follower-widget-background-color: #0f1114;
 $dashboard-follower-widget-hover-border-color: #dce1e56b;
 $dashboard-open-event-widget-label-background-color: #0f1114;
 
+$dashboard-secondary-widget-background-color: #0f1114;
+
 // buttons background colors (with borders)
 
 $dashboard-header-chat-button-background-color: #bcd5fa14;
@@ -69,6 +71,7 @@ $dashboard-carousel-buttons-pressed-background-color: #c2e0ff33;
 $dashboard-press-story-hover-border-color: #dce1e56b;
 $dashboard-history-modal-buttons-background-color: #c2e0ff33;
 $dashboard-exchange-button-background-color: #c2e0ff33;
+$dashboard-progress-bar-color: #bbd9f621;
 
 // buttons colors
 
