--- a/src/components/dashboard-page/Token/AllocationTableWidget/style.scss
+++ b/src/components/dashboard-page/Token/AllocationTableWidget/style.scss
@@ -1,4 +1,4 @@
-@import '../../styles/main';
+@import '../../../../styles/main';
 
 .dashboard-token-allocation-table-widget {
   @include dashboard-widget;
