initial api integration

--- a/src/components/dashboard-page/Team/PastCouncil/style.scss
+++ b/src/components/dashboard-page/Team/PastCouncil/style.scss
@@ -51,6 +51,11 @@
     margin-bottom: 4px;
     display: block;
     width: 123px;
+    height: 123px;
+    background-color: #0f1114;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 50%;
   }
 
