--- a/src/components/dashboard-page/Team/WorkingGroups/style.scss
+++ b/src/components/dashboard-page/Team/WorkingGroups/style.scss
@@ -105,6 +105,7 @@
     color: $dashboard-base-white-text-color;
     font-feature-settings: $dashboard-font-feature-settings;
     text-align: center;
+    text-transform: capitalize;
   }
 
   &__group-lead-and-budget {
