--- a/src/components/dashboard-page/Community/Followers/style.scss
+++ b/src/components/dashboard-page/Community/Followers/style.scss
@@ -31,7 +31,7 @@
     gap: 16px;
 
     &.in-carousel {
-      @include animate-carousel(16px, 25s);
+      @include animate-carousel(16px, 50s);
 
       &.carousel-paused {
         animation-play-state: paused;
@@ -66,6 +66,7 @@
   }
 
   &__follower-name {
+    @include line-clamp(1);
     @include t400;
     font-weight: 600;
     color: $dashboard-content-base-text-color;
@@ -106,7 +107,7 @@
       gap: 24px;
 
       &.in-carousel {
-        @include animate-carousel(24px, 25s);
+        @include animate-carousel(24px, 50s);
       }
     }
   }
