--- a/src/components/token-page/Wallets/style.scss
+++ b/src/components/token-page/Wallets/style.scss
@@ -173,12 +173,16 @@
         flex-direction: column;
         justify-content: unset;
         margin-top: 64px;
+
+        & > a {
+          width: 100%;
+          max-width: 335px;
+        }
       }
 
       &__item {
         width: 100%;
         height: 270px;
-        max-width: 335px;
 
         &__image-wrapper {
           @include logo-wrapper(48px, 48px);
